Invisibilisation bloc.js correction icones et-line

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,7 @@
-@font-face {
-    font-family: et-line;
-    src: url(../fonts/et-line.eot);
-    src: url(../fonts/et-line.eot?#iefix) format('embedded-opentype'), url(../fonts/et-line.woff) format('woff'), url(../fonts/et-line.ttf) format('truetype'), url(../fonts/et-line.svg#et-line) format('svg');
-    font-weight: 400;
-    font-style: normal
-}
-
 .et-icon-edit,
 .et-icon-presentation,
 .et-icon-browser {
     font-family: et-line;
-    speak: none;
     font-style: normal;
     font-weight: 400;
     font-variant: normal;
@@ -18,19 +9,19 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    display: inline-block
+    display: inline-block;
 }
 
 .et-icon-browser:before {
-    content: "\e00c"
+    content: "\e00c";
 }
 
 .et-icon-presentation:before {
-    content: "\e00e"
+    content: "\e00e";
 }
 
 .et-icon-edit:before {
-    content: "\e01c"
+    content: "\e01c";
 }
 
 body {
